# NoAPI

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TODO  bank_statement.py  llmsherpa.py  package.json  pyproject.toml  requirements.txt  turbo.json  version1.md
.github/: CONTRIBUTING.md
backend/: main.py  pyproject.toml
bank_statements/: TODO  bank_statement.py
database/: context_manager.py  migrate.py
documentation/: INSTRUCTIONS.md  example_structure.xlsx  ~$example_structure.xlsx
next-platform/: package.json
next-platform/src/app/: layout.tsx  page.tsx
next-platform/src/app/api/chat/: route.ts
next-platform/src/components/: ChatInput.tsx
now-engine/: DIARY.md  README.md  agent.py  main.py  pyproject.toml  server.py
platform/: Cargo.toml  Dioxus.toml  README.md  input.css  package.json
platform/assets/: tailwind.css
platform/src/: main.rs
platform/src/components/: echo.rs  hero.rs  navbar.rs
platform/src/views/: blog.rs  home.rs
spending/: app.py  login.py  nav.py  performance.py  processor.ipynb  register.py
spending/db/: appdb.py  userdb.py
