[workspace]
members = [
    "platform"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wana Pichpongsa <wana@pichpongsa.com>"]

[workspace.dependencies]
dioxus = { version = "0.6.3", features = ["router", "fullstack"] }

[profile]
# empty profile does nothing until we configure it.
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
